fixed nojs issues - still need to clean up SCSS that's behind the fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -145,6 +145,42 @@ li::before {
 /* State Styles */
 /* Hint: JavaScript-based styles: .nojs, .js, .is-active, .is-hidden */
 /* Within state, repeat the base, layout, and modular structure: */
+.nav1 {
+  display: none; }
+
+.nav2 {
+  display: none; }
+
+.nav3 {
+  display: none; }
+
+.nav4 {
+  display: none; }
+
+.noscript .nav1 {
+  display: block; }
+
+.noscript .nav2 {
+  display: block; }
+
+.noscript .nav3 {
+  display: block; }
+
+.noscript .nav4 {
+  display: block; }
+
+.noscript .navjs1 {
+  display: none; }
+
+.noscript .navjs2 {
+  display: none; }
+
+.noscript .navjs3 {
+  display: none; }
+
+.noscript .navjs4 {
+  display: none; }
+
 [class*="nav"] {
   border-bottom: 1px solid rgba(192, 192, 192, 0);
   -webkit-transition: border 500ms ease;
@@ -153,16 +189,16 @@ li::before {
   -o-transition: border 500ms ease;
   transition: border 500ms ease; }
 
-.nav1:hover {
+.navjs1:hover {
   border-bottom: 1px solid silver; }
 
-.nav2:hover {
+.navjs2:hover {
   border-bottom: 1px solid silver; }
 
-.nav3:hover {
+.navjs3:hover {
   border-bottom: 1px solid silver; }
 
-.nav4:hover {
+.navjs4:hover {
   border-bottom: 1px solid silver; }
 
 /* Media Query Styles */
